# PubChemrs

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  PLAN.md  README.md
.claude/plan/: type-migration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  maturin_build.yml  release.yml  test.yml
PLAN/: kwargs-query-param-support.md
docs/: architecture.md  convenience-api.md  error-handling.md  getting-started.md  low-level-client.md  pyo3-intenum-migration-memo.md  python-bindings.md  replace-legacy-compound-plan.md
pubchemrs_pyo3/: Cargo.toml  pyproject.toml
pubchemrs_pyo3/python/pubchemrs/: __init__.py  _core.py  compound.py  exceptions.py
pubchemrs_pyo3/python/pubchemrs/legacy/: __init__.py  compound.py  errors.py
pubchemrs_pyo3/python/tests/: conftest.py  test_async.py  test_compound.py  test_errors.py  test_imports.py  test_legacy.py  test_properties.py  test_sources.py
pubchemrs_pyo3/python/tests/legacy/: test_compound.py  test_compound3d.py  test_download.py  test_errors.py  test_identifiers.py  test_pandas.py  test_requests.py  test_search.py  test_sources.py
pubchemrs_pyo3/python/tests/pubchempy_compat/: test_assay.py  test_compound.py  test_properties.py  test_substance.py
pubchemrs_pyo3/src/: client.rs  compound.rs  error.rs  legacy.rs  lib.rs
pubchemrs_struct/: Cargo.toml  README.md  pyproject.toml
pubchemrs_struct/src/: lib.rs  macros.rs  properties.rs
pubchemrs_struct/src/error/: err_string.rs  mod.rs
pubchemrs_struct/src/requests/: common.rs  mod.rs  output.rs  url_builder.rs
pubchemrs_struct/src/requests/input/: domain.rs  identifiers.rs  mod.rs
pubchemrs_struct/src/requests/input/namespace/: assay.rs  compound.rs  mod.rs  others.rs  substance.rs
pubchemrs_struct/src/requests/operation/: assay.rs  compound.rs  mod.rs  property.rs  simple.rs  substance.rs  xrefs.rs
pubchemrs_struct/src/response/: information_list.rs  mod.rs
pubchemrs_struct/src/response/compound/: atom.rs  bond.rs  conformer.rs  coordinate.rs  mod.rs  others.rs  py_methods.rs
pubchemrs_struct/src/structs/: atom.rs  bond.rs  classification.rs  compound.rs  convert.rs  coordinates.rs  mod.rs
pubchemrs_struct/tests/fixtures/: aspirin_properties.json
pubchemrs_tokio/: Cargo.toml
pubchemrs_tokio/src/: api.rs  client.rs  convenience.rs  error.rs  lib.rs
pubchemrs_tokio/tests/: convenience_integration.rs  integration.rs
