[package]
name        = "pubchemrs_pyo3"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
description = "Python bindings for the PubChem PUG REST API client"
repository  = "https://github.com/kkiyama117/PubChemrs"
keywords    = ["pubchem", "chemistry", "api", "python"]
categories  = ["science", "api-bindings"]

[lib]
name = "_pubchemrs"
crate-type = ["cdylib"]

[dependencies]
pubchemrs_struct = { path = "../pubchemrs_struct", version = "0.1", features = ["pyo3"] }
pubchemrs_tokio  = { path = "../pubchemrs_tokio", version = "0.1" }
pyo3 = { version = "0.28", features = ["abi3-py39"] }
pyo3-async-runtimes = { version = "0.28", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
serde_json = "1"
