[package]
name = "pubchemrs_struct"
version = "0.1.0"
edition = "2024"

[dependencies]
itertools = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
urlencoding = "2"

[dependencies.pyo3]
version = "0.23"
optional = true
features = ["abi3-py39"]

[features]
default = []
pyo3 = ["dep:pyo3"]
