[package]
name        = "pubchemrs_struct"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
description = "Strongly-typed data structures for the PubChem PUG REST API"
repository  = "https://github.com/kkiyama117/PubChemrs"
keywords    = ["pubchem", "chemistry", "api"]
categories  = ["science", "api-bindings"]

[dependencies]
itertools   = "0.14"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
thiserror   = "2"
urlencoding = "2"

[dependencies.pyo3]
version  = "0.28.1"
optional = true
features = ["abi3-py39"]

[package.metadata.docs.rs]
all-features = true

[features]
default = []
pyo3    = ["dep:pyo3"]
