[package]
name        = "pubchemrs_tokio"
version     = "0.1.0"
edition     = "2024"
license     = "MIT"
description = "Async HTTP client for the PubChem PUG REST API"
repository  = "https://github.com/kkiyama117/PubChemrs"
keywords    = ["pubchem", "chemistry", "api", "async"]
categories  = ["science", "api-bindings"]

[dependencies]
pubchemrs_struct = { path = "../pubchemrs_struct", version = "0.1.0" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["time"] }
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
